--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,5 @@ entrypoint = "./functions/parent-report/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/parent-report/*.html" ]
+[functions.mastery-worker]
+verify_jwt = false
